# Robot-SPERO-SImulasi-dan-Kontrol-Fisik

./: .gitignore  README.md  fastrtps_profile.xml  lidar_bridge_node.py  run_lidar_visual.sh  rvis.launch.py  scale_sdf.py  test_clean_launch.sh  test_mqtt_connectivity.py  test_mqtt_debug.py  test_mqtt_send.py
src/bcr_bot/: README.md  README_A1M8_MAPPING.md  README_SCALING.md  package.xml  setup.py
src/bcr_bot/Gazebo_Objek/: cube.dae  fixed  full  kotak.dae  kursi putih.dae  paling_fixed  pot.dae
src/bcr_bot/bcr_bot/: explore.py  teleop.py
src/bcr_bot/config/: a1m8_mapper_params.yaml  a1m8_no_rear_config.yaml  amcl_params.yaml  bcr_map.pgm  bcr_map.yaml  gedung_p_map.pgm  gedung_p_map.yaml  mapper_params_online_async.yaml  mapper_params_physical_lidar.yaml  nav2_params.yaml  spero_bridge.yaml  waypoints.yaml
src/bcr_bot/launch/: a1m8_mapping.launch.py  bcr_bot_ign_spawn.launch.py  gazebo.launch.py  global_mapping.launch.py  ign.gedung_p.sperro.launch.py  ign_gedung_p.launch.py  ign_gedung_p_scaled.launch.py  lidar_visual.launch.py  mapping.launch.py  nav2.launch.py  roam.launch.py  rsp.launch.py  rviz_rplidar.launch.py
src/bcr_bot/rviz/: a1m8_mapping.rviz  global_mapping.rviz  lidar_visual.rviz  map_simple.rviz  rplidar.rviz
src/bcr_bot/scripts/: CHANGES_SUMMARY.md  MQTT_DISCONNECT_FIX.md  README_lidar_setup.md  README_robot_control.md  TROUBLESHOOTING_MAPPING.md  a1m8_robust_lidar.py  check_mapping_status.sh  check_mqtt_status.py  debug_test_robot_mqtt.py  diagnose_global_mapping.py  diagnose_lidar_issue.py  fix_lidar_issues.sh  global_mapping_node.py  roam.py  (+55 more)
(+86 files in other folders)
